# rust-app

adder/: Cargo.toml
adder/src/: lib.rs
branches/: Cargo.toml
branches/src/: main.rs
closure/: Cargo.toml
closure/src/: main.rs
closure2/: Cargo.toml
closure2/src/: lib.rs  main.rs
collection/: Cargo.toml
collection/src/: enumtype.rs  hashmap.rs  main.rs  string.rs
communicator/: Cargo.toml
communicator/src/: client.rs  lib.rs  network.rs
communicator/src/foo/: mod.rs
enum_sample/: Cargo.toml
enum_sample/src/: main.rs  match.rs  message.rs
error_handling/: Cargo.toml
error_handling/src/: back.rs  delegate.rs  file.rs  guess.rs  main.rs
generic/: Cargo.toml
generic/src/: main.rs  pair.rs
generic/src/classes/: mod.rs  tweet.rs
guessing_game/: Cargo.toml
guessing_game/src/: main.rs
hello_cargo/: Cargo.toml
hello_world/: main.rs
minigrep/: Cargo.toml
minigrep/src/: lib.rs  main.rs
owner/: Cargo.toml
owner/src/: clone.rs  main.rs  mut_ref.rs  owner.rs  ref.rs  scope.rs  slice.rs
structure/: Cargo.toml
structure/src/: format.rs  main.rs  method.rs  method2.rs  rectangles.rs
variables/: Cargo.toml
variables/src/: main.rs
