[package]
name = "error_handling"
version = "0.1.0"
authors = ["Keita Akutsu <kakts.git@gmail.com>"]

[dependencies]

[[bin]]
name = "back"
src = "src/back.rs"

[[bin]]
name = "main"
script = "./src/main.rs"

[[bin]]
name = "file"
script = "./src/file.rs"

[[bin]]
name = "guess"
script = "./src/guess.rs"

[profile.release]
panic = 'abort'
