[package]
name = "owner"
version = "0.1.0"
authors = ["Keita Akutsu <kakts.git@gmail.com>"]

[dependencies]

[[bin]]
name = "main1"
path = "src/main.rs"

[[bin]]
name = "clone"
path = "src/clone.rs"

[[bin]]
name = "owner"
path = "src/owner.rs"

[[bin]]
name = "scope"
path = "src/scope.rs"

[[bin]]
name = "mut_ref"
path = "src/mut_ref.rs"

[[bin]]
name = "slice"
path = "src/slice.rs"
