[package]
name = "structure"
version = "0.1.0"
authors = ["Keita Akutsu <kakts.git@gmail.com>"]

[dependencies]

[[bin]]
name = "rectangles"
path = "src/rectangles.rs"

[[bin]]
name = "format"
path = "src/format.rs"

[[bin]]
name = "method"
path = "src/method.rs"

[[bin]]
name = "method2"
path = "src/method2.rs"
